syntax = "proto3";

package auth;

option go_package = "auth.service";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc GetRole (GetRoleRequest) returns (GetRoleResponse) {}
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  uint64 user_id = 1;
  string username = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  uint32 app_id = 3;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetRoleRequest {
  uint64 user_id = 1;
}

message GetRoleResponse {
  uint32 role = 1;
}